--- a/stories/seamstress/index.html
+++ b/stories/seamstress/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-		<title>jQuery UI Example Page</title>
+		<title>Seamstress</title>
 		<link type="text/css" href="css/base.css" rel="stylesheet" />	
 		<link type="text/css" href="css/ui-lightness/jquery-ui-1.8.2.custom.css" rel="stylesheet" />	
 		<script type="text/javascript" src="js/sparql.js"></script>
